segundo commit de GYM-BRO

--- a/frontend/administrador/agregar.html
+++ b/frontend/administrador/agregar.html
@@ -30,7 +30,22 @@
             <h2>Administrar</h2>
         </div>
         <h2>¡Con cada repetición te acerta a tú mejor versión!</h2>   
+
+        <!-- apartado de administracion de la pagina-->
+
         <div class="seleccionar">
+            
+            <div id="administrar">
+                <div class="caja_titulo">
+                    <h1>Administrar Usuarios </h1>
+                </div>
+                <div class="informacion">
+                    <button type="button" class="administrarUsuario" onclick="window.location.href='/administrador/administrarUsuarios.html'"><p id="p">Usuarios</p></button>
+                    <div class="info">
+                        <h2>Agregar, modificar o eliminar</h2>
+                    </div>
+                </div>
+            </div>
 
             <div id="administrar">
                 <div class="caja_titulo">
