--- a/frontend/usuario/interfazprincipal.html
+++ b/frontend/usuario/interfazprincipal.html
@@ -84,7 +84,7 @@
                     <h1>Ejercicios</h1>
                 </div>
                 <div class="informacion">
-                    <button type="button" class="ejercicio" onclick="window.location.href='ejercicios.html'"><p id="p">Entrenamiento</p></button>
+                    <button type="button" class="ejercicio" onclick="window.location.href='rutinas.html'"><p id="p">Entrenamiento</p></button>
                     <div class="info">
                         <h2>A GANAR FUERZA Y MASA MUSCALAR</h2>
                         <p>Buena elección!<br>
