--- a/frontend/administrador/agregar.html
+++ b/frontend/administrador/agregar.html
@@ -12,7 +12,12 @@
             <header>
                 <div class="apartado">
                     <ul>
-                        <li><a href="interfazprincipal_admin.html">Atras</a></li>
+                        <li><a onclick="volver()">Atras</a></li>
+                        <script>
+                        function volver() {
+                            window.history.back(); // o window.history.go(-1);
+                            }
+                        </script>
                     </ul>
                 </div>
 
@@ -52,7 +57,7 @@
                     <h1>Administrar ejercicios </h1>
                 </div>
                 <div class="informacion">
-                    <button type="button" class="administrarEjercicios" onclick="window.location.href=''"><p id="p">Ejercicios</p></button>
+                    <button type="button" class="administrarEjercicios" onclick="window.location.href='/administrador/administrarRutinas.html'"><p id="p">Ejercicios</p></button>
                     <div class="info">
                         <h2>Agregar, modificar o eliminar</h2>
                     </div>
