casi ultimo comit GYM-BRO

--- a/frontend/administrador/administrarRutinas.html
+++ b/frontend/administrador/administrarRutinas.html
@@ -24,6 +24,7 @@
         <input type="text" id="rutina" placeholder="Nombre de la rutina" required>
         <input type="text" id="frase" placeholder="frase" required>
         <input type="text" id="descripcion" placeholder="descripcion" required>
+        <input type="text" id="imagen" placeholder="URL de la imagen de fondo" required>
         <button type="submit">añadir</button>
     </form>
 
@@ -34,6 +35,7 @@
                 <th>Rutina</th>
                 <th>Frase</th>
                 <th>Descripcion</th>
+                <th>Imagen</th>
             </tr>
         </thead>
         <tbody id="tablaRutinas">
