--- a/frontend/administrador/administrarUsuarios.html
+++ b/frontend/administrador/administrarUsuarios.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usuarios</title>
     <link rel="stylesheet" href="/administrador/administrarUsuarios.css">
-    <button type="button" class="administrarUsuario" onclick="window.location.href='/administrador/administrarEjercicios.html'"><p id="p">Ejercicios</button>
-        <button type="button" class="administrarUsuario" onclick="window.location.href='/administrador/administrarDietas.html'"><p id="p">Dietas</button>
+    <button type="button" class="administrarRutinas" onclick="window.location.href='/administrador/administrarRutinas.html'"><p id="p">Ejercicios</button>
+        <button type="button" class="administrarDietas" onclick="window.location.href='/administrador/administrarDietas.html'"><p id="p">Dietas</button>
 </head>
 <body>
 
