--- a/frontend/usuario/rutinas.html
+++ b/frontend/usuario/rutinas.html
@@ -65,14 +65,10 @@
         </div>
         <h2>¡Con cada repetición te acerta a tú mejor versión!</h2> 
         
+        <div id="botonesRutinas"></div>
         
-        <div class="tablaEjercicios">
+        <script src="/administrador/js/rutina.js"></script>
 
-
-            <div id="botonesRutinas"></div>
-
-
-        </div>
 
         <div id="contactos">
             <h1>Contactate con nosotros</h1>
@@ -100,8 +96,6 @@
 
 
     </div>
-
-        <script src="/usuario/js/rutinas.js"></script>
 
 </body>
 </html>
