--- a/frontend/administrador/agregar.html
+++ b/frontend/administrador/agregar.html
@@ -69,7 +69,7 @@
                     <h1>administrar dietas</h1>
                 </div>
                 <div class="informacion">
-                    <button type="button" class="adminsitrarDietas" onclick="window.location.href=''"><p id="p">Dietas</p></button>
+                    <button type="button" class="adminsitrarDietas" onclick="window.location.href='/administrador/administrarDietas.html'"><p id="p">Dietas</p></button>
                     <div class="info">
                         <h2>Agregar, modificar o eliminar</h2>
                     </div>
