commit fenalizado dietas y ejercicios GYM-BRO

--- a/frontend/administrador/dietas_admin.html
+++ b/frontend/administrador/dietas_admin.html
@@ -67,46 +67,9 @@
         <h2>¡Con cada repetición te acerta a tú mejor versión!</h2>   
         <div class="seleccionar">
 
-            <div id="dietas_balanceadas">
-                <div class="caja_titulo">
-                    <h1>Balanceadas</h1>
-                </div>
-                <div class="informacion">
-                    <button type="button" class="dietas_balanceadas" onclick=""><p id="p">Balanceadas</p></button>
-                    <div class="info">
-                        <h2>MANTÉN TU EQUILIBRIO</h2>
-                        <p>adecuadas para mantener el cuerpo sano y  tener energía
-                            
-                    </div>
-                </div>
-            </div>
+            <div id="botonesDietas"></div>
+                <script src="/administrador/js/dietas.js"></script>
 
-            <div id="volumen">
-                <div class="caja_titulo">
-                    <h1>Volumen</h1>
-                </div>
-                <div class="informacion">
-                    <button type="button" class="volumen" onclick="window.location.href=''"><p id="p">Volumen</p></button>
-                    <div class="info">
-                        <h2>¡MODO HULK!</h2>
-                        <p>Dispuesto para crecer y aumentar la masa muscular</p>
-                    </div>
-                </div>
-            </div>
-
-            <div id="bajar_peso">
-                <div class="caja_titulo">
-                    <h1>Bajar de peso</h1>
-                </div>
-                <div class="informacion">
-                    <button type="button" class="bajar_peso" onclick=""><p id="p">Bajar de peso</p></button>
-                    <div class="info">
-                        <h2>ESTÁS CAMBIANDO TU VIDA</h2>
-                        <p>adecuadas para mantener el cuerpo sano, tener energía</p>
-                    </div>
-                </div>
-                
-            </div>
         </div>
 
         <div id="contactos">
@@ -133,5 +96,7 @@
             </footer>
         </div>
     </div>
+
+
 </body>
 </html>
