--- a/frontend/usuario/dietas.html
+++ b/frontend/usuario/dietas.html
@@ -66,6 +66,8 @@
         <h2>¡Con cada repetición te acerta a tú mejor versión!</h2>   
         <div class="seleccionar">
 
+            <div id="botonesDietas"></div>
+
             <div id="dietas_balanceadas">
                 <div class="caja_titulo">
                     <h1>Balanceadas</h1>
@@ -133,5 +135,7 @@
         </div>
 
     </div>
+
+    <script src="/administrador/js/dietas.js"></script>
 </body>
 </html>
