actualizacion pectoral.html

--- a/frontend/rutinas/pectoral.html
+++ b/frontend/rutinas/pectoral.html
@@ -6,6 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    que htpas tetaaaaaaaaaaaaaaaass
+    <div>
+        encabezado
+    </div>
+
+    <div>
+        nombre del ejercicio
+    </div>
+    <div>
+        descripcion del ejercicio>
+    </div>
+    <div>
+        explicacion del ejercicio
+    </div>
+    <div>
+        imagen/video ejercicio
+    </div>
+
+    <div>contactos</div>
 </body>
 </html>
