--- a/frontend/administrador/administrarUsuarios.html
+++ b/frontend/administrador/administrarUsuarios.html
@@ -5,18 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usuarios</title>
     <link rel="stylesheet" href="/administrador/administrarUsuarios.css">
-    <button type="button" class="administrarRutinas" onclick="window.location.href='/administrador/administrarRutinas.html'"><p id="p">Ejercicios</button>
-        <button type="button" class="administrarDietas" onclick="window.location.href='/administrador/administrarDietas.html'"><p id="p">Dietas</button>
+   
 </head>
 <body>
 
-    <div class="atras">
-        <button type="button" class="administrarUsuario" onclick="volver()"><p id="p">ATRAS</button>
-        <script>
-        function volver() {
-            window.history.back(); // o window.history.go(-1);
-        }
-        </script>
+    <div class="botonesEncabezado">
+         <button type="button" id="administrar" onclick="window.location.href='/administrador/administrarRutinas.html'"><p id="p">Ejercicios</button>
+        <button type="button" id="administrar" onclick="window.location.href='/administrador/administrarDietas.html'"><p id="p">Dietas</button>
+        <button type="button" id="administrar" onclick="window.location.href='/administrador/agregar.html'"><p id="p">atras</button>
     </div>
 
     <h1>Gestión de clientes</h1>
