--- a/frontend/administrador/dietas_admin.html
+++ b/frontend/administrador/dietas_admin.html
@@ -51,7 +51,7 @@
 
                 <div class="cerrar_seson">
                     <ul>
-                        <li><a href="../inicio/inicio.html">Cerrar sesión</a></li>
+                        <li><a id="logout" >Cerrar sesión</a></li>
                     </ul>    
                 </div>
 
