--- a/frontend/administrador/ejercicios_admin.html
+++ b/frontend/administrador/ejercicios_admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="ejercicios_admin.css">
+    <link rel="stylesheet" href="/administrador/ejercicios_admin.css">
 </head>
 <body>
     <div class="contenido">
@@ -51,7 +51,7 @@
 
                 <div class="cerrar_seson">
                     <ul>
-                        <li><a href="../inicio/inicio.html">Cerrar sesión</a></li>
+                        <li><a id="logout" >Cerrar sesión</a></li>
                     </ul>    
                 </div>
 
