--- a/frontend/administrador/estiramientos_administrador.html
+++ b/frontend/administrador/estiramientos_administrador.html
@@ -52,8 +52,9 @@
 
                 <div class="cerrar_seson">
                     <ul>
-                        <li><a href="../inicio/inicio.html">Cerrar sesión</a></li>
-                    </ul>    
+                        <li><a id="logout" >Cerrar sesión</a></li>
+                    </ul>  
+                    <script src="/administrador/js/interfaz.js"></script>  
                 </div>
 
                 
