--- a/frontend/administrador/interfazprincipal_admin.html
+++ b/frontend/administrador/interfazprincipal_admin.html
@@ -64,15 +64,10 @@
 
                 <div class="cerrar_seson">
                     <ul>
-                        <li><a href="#" id="logout" >Cerrar sesión</a></li>
-                    </ul>    
+                        <li><a id="logout" >Cerrar sesión</a></li>
+                    </ul>   
+                    <script src="/administrador/js/interfaz.js"></script> 
                 </div>
-
-                <script>
-                document.getElementById('logout').addEventListener('click', () => {
-                    window.location.replace('../inicio/inicio.html'); // Redirige al archivo que borra la sesión
-                    });
-                </script>
                 
             </header>
         </div>
