--- a/frontend/inicio/inicio.html
+++ b/frontend/inicio/inicio.html
@@ -20,15 +20,16 @@
           <h2>Inicia sesión</h2>
           <div class="datos">
             <h5>USER</h5>
-            <input type="text" id="correo" placeholder="correo"> 
+            <input type="text" id="correo" placeholder="correo" required> 
             <h5>CONTRASEÑA</h5>
-            <input type="password" id="contraseña" placeholder="Contraseña">
+            <input type="password" id="contraseña" placeholder="Contraseña" required>
           </div>
           
           <button id="iniciar-sesion" type="submit">INICIAR SESIÓN</button>
           
           <div class="linea"></div>
         ¿No tienes cuenta en GYM-BRO?<a href="/inicio/registro.html">¡Registrate!</a>
+        ¿Se te olvido tu contraseña?<a href="/inicio/recuperarContraseña.html" id="recuperar-link">Recupera tu contraseña</a>
         </form>
       </div>
     </div>
