--- a/frontend/usuario/dietas.html
+++ b/frontend/usuario/dietas.html
@@ -139,3 +139,9 @@
     <script src="/administrador/js/dietas.js"></script>
 </body>
 </html>
+
+    </div>
+
+    <script src="/administrador/js/dietas.js"></script>
+</body>
+</html>
