--- a/frontend/administrador/administrarRutinas.html
+++ b/frontend/administrador/administrarRutinas.html
@@ -14,7 +14,7 @@
         <button type="button" class="administrarUsuario" onclick="window.location.href='/administrador/administrarDietas.html'"><p id="p">Dietas</button>
     </div>
 
-    <h1>Gestión de clientes</h1>
+    <h1>Gestión de Rutinas</h1>
     <form id="formRutina">
         <input type="text" id="rutina" placeholder="Nombre de la rutina" required>
         <input type="text" id="frase" placeholder="frase" required>
